Name:                   groundhog-converters
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Extended Converter Library for groundhog embedded types
Description:
            Groundhog allows a programmer to represent a haskell datatype by an equivalent type that is more suited for Database work.
            groundhog-converters provides a selection of common converters that have proved useful.
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md
Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Database.Groundhog.Converters
--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , bytestring
                      , containers
                      , bimap 
                      
                      , lens
                      , regex-genex
                      , groundhog
                      , groundhog-sqlite
                      , groundhog-th                      
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck

executable groundhog-converters
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  main-is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , groundhog-converters
-- Test Suite Code
                      , lens
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck
                      

Source-Repository head
  Type:                 git
--  Location:             
